@@ -488,7 +488,7 @@ info_gnome()
 
 info_generic()
 {
-    DEBUG 1 "Running /usr/bin/file -i \"$1\"" 
+    DEBUG 1 "Running /usr/bin/file -i \"$1\""
     /usr/bin/file -i "$1" 2> /dev/null | cut -d ":" -f 2 | sed s/"^ "//
 
     exit_success
@@ -497,14 +497,14 @@ info_generic()
 make_default_kde()
 {
     # $1 is vendor-name.desktop
-    # $2 is mime/type 
+    # $2 is mime/type
     # Add to $KDE_HOME/share/config/profilerc:
     # [$2 - 1]
     # Application=$1
     #
     # Remove all [$2 - *] sections, or even better,
     # renumber [$2 - *] sections and remove duplicate
-    
+
     default_file="$HOME/.kde/share/config/profilerc"
     DEBUG 2 "make_default_kde $1 $2"
     DEBUG 1 "Updating $default_file"
@@ -515,7 +515,7 @@ make_default_kde()
         header_start="[" mimetype " - "
         supress=0
     }
-    {  
+    {
         if (index($0, header_start) == 1 )
             supress=1
         else
@@ -526,7 +526,7 @@ make_default_kde()
         }
     }
     END {
-        print "" 
+        print ""
         print "[" mimetype " - 1]"
         print "Application=" application
         print "AllowAsDefault=true"
@@ -540,7 +540,7 @@ make_default_kde()
 make_default_generic()
 {
     # $1 is vendor-name.desktop
-    # $2 is mime/type 
+    # $2 is mime/type
     # Add $2=$1 to XDG_DATA_HOME/applications/defaults.list
     xdg_user_dir="$XDG_DATA_HOME"
     [ -n "$xdg_user_dir" ] || xdg_user_dir="$HOME/.local/share"
@@ -578,11 +578,17 @@ defapp_generic()
 defapp_kde()
 {
     MIME="$1"
-    ktradertest=`which ktradertest 2> /dev/null`
-    if [ -n "$ktradertest" ] ; then
-        DEBUG 1 "Running ktradertest \"$MIME\" Application"
-        trader_result=`ktradertest "$MIME" Application 2>/dev/null | grep DesktopEntryPath \
-            | head -n 1 | cut -d ':' -f 2 | cut -d \' -f 2`
+    if [ x"$KDE_SESSION_VERSION" = x"4" ]; then
+        KTRADER=`which ktraderclient 2> /dev/null`
+        MIMETYPE="--mimetype"
+        SERVICETYPE="--servicetype"
+    else
+        KTRADER=`which ktradertest 2> /dev/null`
+    fi
+    if [ -n "$KTRADER" ] ; then
+        DEBUG 1 "Running KDE trader query \"$MIME\" mimetype and \"Application\" servicetype"
+        trader_result=`$KTRADER $MIMETYPE "$MIME" $SERVICETYPE Application 2>/dev/null \
+            | grep DesktopEntryPath | head -n 1 | cut -d ':' -f 2 | cut -d \' -f 2`
         if [ -n "$trader_result" ] ; then
             basename "$trader_result"
             exit_success
@@ -613,16 +619,16 @@ case $1 in
   query)
     shift
 
-    if [ -z "$1" ] ; then 
+    if [ -z "$1" ] ; then
         exit_failure_syntax "query type argument missing"
     fi
-    
+
     case $1 in
       filetype)
         action=info
 
         filename="$2"
-        if [ -z "$filename" ] ; then 
+        if [ -z "$filename" ] ; then
             exit_failure_syntax "FILE argument missing"
         fi
         case $filename in
@@ -636,7 +642,7 @@ case $1 in
       default)
         action=defapp
         mimetype="$2"
-        if [ -z "$mimetype" ] ; then 
+        if [ -z "$mimetype" ] ; then
             exit_failure_syntax "mimetype argument missing"
         fi
         case $mimetype in
@@ -664,7 +670,7 @@ case $1 in
     action=makedefault
     shift
 
-    if [ -z "$1" ] ; then 
+    if [ -z "$1" ] ; then
         exit_failure_syntax "application argument missing"
     fi
     case $1 in
@@ -691,7 +697,7 @@ shift
 
 
 if [ "$action" = "makedefault" ]; then
-    if [ -z "$1" ] ; then 
+    if [ -z "$1" ] ; then
         exit_failure_syntax "mimetype argument missing"
     fi
 
@@ -703,7 +709,7 @@ if [ "$action" = "makedefault" ]; then
         esac
         mimetype="$1"
         shift
-        
+
         make_default_kde "$filename" "$mimetype"
         make_default_generic "$filename" "$mimetype"
     done
@@ -768,7 +774,7 @@ while [ $# -gt 0 ] ; do
           system)
             mode="system"
             ;;
-            
+
           *)
             exit_failure_syntax "unknown mode '$1'"
             ;;
@@ -902,7 +908,7 @@ BEGIN {
  supress=0
 }
 {
- do 
+ do
     if (supress) {
        if (match($0,/-->/)) {
            $0=substr($0,RSTART+RLENGTH)
@@ -937,7 +943,7 @@ BEGIN {
     }
   }
 }'`
-fi  
+fi
 
 DEBUG 1 "$action mimetype in $xdg_dir"
 
@@ -953,7 +959,7 @@ case $action in
 
         if [ -n "$mimetypes" ] ; then
             # No quotes around $mimetypes
-            for x in $mimetypes ; do 
+            for x in $mimetypes ; do
                 DEBUG 1 "Installing $kde_dir/$x.desktop (KDE 3.x support)"
                 mkdir -p `dirname $kde_dir/$x.desktop`
                 awk < "$filename" '
@@ -962,7 +968,7 @@ BEGIN {
  supress=0
 }
 {
- do 
+ do
     if (supress) {
        if (match($0,/-->/)) {
            $0=substr($0,RSTART+RLENGTH)
@@ -987,7 +993,7 @@ BEGIN {
 }
 ' | awk > $kde_dir/$x.desktop '
 # Extract mimetype $x from the XML file $filename
-# Note that bash requires us to escape a single quote as '"'"' 
+# Note that bash requires us to escape a single quote as '"'"'
 BEGIN {
   the_type=ARGV[1]
   the_source=ARGV[2]
@@ -1007,7 +1013,7 @@ BEGIN {
         print "MimeType=" the_type
         the_icon=the_type
         sub("/", "-", the_icon)
-        print "Icon=" the_icon 
+        print "Icon=" the_icon
       }
     }
   }
@@ -1019,25 +1025,25 @@ BEGIN {
     }
 
     if (match($0,/^sub-class-of/)) {
-      if (match($0,/type="[^"]*/) || match($0,/type='"'"'[^'"'"']*/)) {    
+      if (match($0,/type="[^"]*/) || match($0,/type='"'"'[^'"'"']*/)) {
         print "X-KDE-IsAlso=" substr($0,RSTART+6,RLENGTH-6)
       }
       else {
         print "Error: '"'"'type'"'"' argument missing in " RS $0
-        exit 1 
+        exit 1
       }
     }
     if (match($0,/^glob/)) {
-      if (match($0,/pattern="[^"]*/) || match($0,/pattern='"'"'[^'"'"']*/)) {    
+      if (match($0,/pattern="[^"]*/) || match($0,/pattern='"'"'[^'"'"']*/)) {
         glob_patterns = glob_patterns substr($0,RSTART+9,RLENGTH-9) ";"
       }
       else {
         print "Error: '"'"'pattern'"'"' argument missing in " RS $0
-        exit 1 
+        exit 1
       }
     }
     if (match($0,/^comment/)) {
-      if (match($0,/xml:lang="[^"]*/) || match($0,/xml:lang='"'"'[^'"'"']*/)) {    
+      if (match($0,/xml:lang="[^"]*/) || match($0,/xml:lang='"'"'[^'"'"']*/)) {
         lang=substr($0,RSTART+10,RLENGTH-10)
       }
       else {
@@ -1066,7 +1072,7 @@ END {
                 if [ "$?" = "1" ] ; then
                     grep -A 10 "^Error:" $kde_dir/$x.desktop >&2
                     rm $kde_dir/$x.desktop
-                    exit 1  
+                    exit 1
                 fi
             done
         fi
@@ -1080,7 +1086,7 @@ END {
         done
 
         # No quotes around $mimetypes
-        for x in $mimetypes ; do 
+        for x in $mimetypes ; do
             if grep '^# Installed by xdg-mime' $kde_dir/$x.desktop >/dev/null 2>&1; then
                 DEBUG 1 "Removing $kde_dir/$x.desktop (KDE 3.x support)"
                 rm -f $kde_dir/$x.desktop
