@@ -1,5 +1,9 @@
 === xdg-utils 1.x.x ====
 
+2009-07-28 Fathi Boudra <fabo@debian.org>
+    * Add KDE 4 support to xdg-mime. kdetradertest was replaced by
+      ktraderclient under KDE 4.
+
 2009-07-27 Fathi Boudra <fabo@debian.org>
     * Remove -u option from su. It doesn't have it.
 
